part4/Exercise_4.01_Readiness_Probe/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logimages-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logimages
  template:
    metadata:
      labels:
        app: logimages
    spec:
      containers:
        - name: log-output
          image: sonawei/log-output:v4.01
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
        - name: pingpong
          image: sonawei/pingpong:v4.01
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3001
            initialDelaySeconds: 10
            periodSeconds: 5
